1.0 release